Fixed: Flickering on pages

--- a/client/src/scss/components/passwordeye.scss
+++ b/client/src/scss/components/passwordeye.scss
@@ -12,7 +12,7 @@
 		top: 0;
 		bottom: 0;
 		height: min-content;
-		color: $color1;
+		color: $cerulean-crayola;
 		opacity: 0.7;
 		cursor: pointer;
 		padding: 10px;
