--- a/client/src/scss/pages/_login.scss
+++ b/client/src/scss/pages/_login.scss
@@ -77,6 +77,7 @@
 
 		.signup {
 			color: $cerulean-crayola;
+			cursor: pointer;
 		}
 	}
 	.login__right {
