--- a/client/src/scss/pages/_register.scss
+++ b/client/src/scss/pages/_register.scss
@@ -107,6 +107,7 @@
 
 		.signin {
 			color: $cerulean-crayola;
+			cursor: pointer;
 		}
 	}
 	&__error {
